--- a/2020-08-26t09-15-36z.md
+++ b/2020-08-26t09-15-36z.md
@@ -5,7 +5,8 @@ id: 2020-08-26t09-15-36z
 ---
 
 It is quite difficult to think deeply about something without writing your
-thoughts down. In a certain sense, writing is the only thing that matters.
+thoughts down. In a certain sense, [writing](./2020-08-27t21-19-42z.md) is the
+only thing that matters.
 
 This is because writing things down (in your own words) forces you to
 _elaborate_ on their meaning, causing you to reflect and think about what you
@@ -16,6 +17,9 @@ your focus.
 
 Writing allows you to test your understanding (and receive
 [feedback](./2020-08-26t10-01-09z.md)) by writing rephrased notes.
+
+Writing things down [frees your mind](./2020-08-26t10-09-40z.md) to think about
+more important things.
 
 Extended practice in writing as you read will teach you how to discern good
 arguments from good-sounding arguments.
