change to wikipedia link

--- a/2020-08-30t21-57-31z.md
+++ b/2020-08-30t21-57-31z.md
@@ -16,8 +16,8 @@ masses, a difference that arises due to the fact that the Sun does not heat the
 Earth evenly [@WhatJetStream].
 
 This is however a bit of a simplification and in fact the
-[Coriolis force](2020-09-01t14-42-19z.md) (caused by Earth's spin on its axis)
-also comes into play [@JetStream2020].
+[Coriolis force](https://en.wikipedia.org/wiki/Coriolis_force)
+(caused by Earth's spin on its axis) also comes into play [@JetStream2020].
 
 ![](https://scijinks.gov/review/jet-stream/primary-jet-streams-on-globe.png)
 ![](https://scijinks.gov/review/jet-stream/GOES-16-polar-jet-stream.gif)
