git subrepo pull literature-notes
subrepo:
  subdir:   "literature-notes"
  merged:   "0900b2b"
upstream:
  origin:   "git@github.com:thesofakillers/literature-notes.git"
  branch:   "master"
  commit:   "0900b2b"
git-subrepo:
  version:  "0.4.1"
  origin:   "???"
  commit:   "???"

--- a/literature-notes/references.bib
+++ b/literature-notes/references.bib
@@ -50,6 +50,20 @@
   journal = {Paul Graham}
 }
 
+@inproceedings{guesalagaFASSFullAperture2016,
+  title = {{{FASS}}: The Full Aperture Seeing Sensor},
+  shorttitle = {{{FASS}}},
+  booktitle = {Adaptive {{Optics Systems V}}},
+  author = {Guesalaga, A. and Perera, S. and Osborn, J. and Sarazin, M. and Neichel, B. and Wilson, R.},
+  year = {2016},
+  month = jul,
+  volume = {9909},
+  pages = {99090H},
+  publisher = {{International Society for Optics and Photonics}},
+  doi = {10.1117/12.2232012},
+  file = {/Users/thesofakillers/Zotero/storage/XPG5D7Q2/Guesalaga et al. - 2016 - FASS the full aperture seeing sensor.pdf;/Users/thesofakillers/Zotero/storage/ECAGP3KH/12.2232012.html}
+}
+
 @article{hagelinOpticalTurbulenceInfluence,
   title = {Optical {{Turbulence The}} Influence of the Atmosphere on Ground-Based Astronomy},
   author = {Hagelin, S and Masciadri, E and Lascaux, F},
@@ -147,6 +161,17 @@
   file = {/Users/thesofakillers/Zotero/storage/AVVPS25Z/Sarazin_Roddier_1990_The ESO differential image motion monitor.pdf},
   journal = {Astronomy and Astrophysics},
   keywords = {Earth Atmosphere,Error Analysis,Image Motion Compensation,Optical Properties,Performance Tests,Perturbation Theory,Site Selection,Telescopes}
+}
+
+@article{tokovininMeasuringTurbulenceProfile2002,
+  title = {Measuring Turbulence Profile from Scintillations of Single Stars},
+  author = {Tokovinin, A. and Kornilov, V.},
+  year = {2002},
+  volume = {266},
+  pages = {104},
+  annotation = {ZSCC: 0000024},
+  file = {/Users/thesofakillers/Zotero/storage/WKGQFU8X/Tokovinin_Kornilov_2002_Measuring turbulence profile from scintillations of single stars.pdf},
+  isbn = {9781583811061}
 }
 
 @misc{WhatJetStream,
