--- a/2020-09-14t14-24-41z.md
+++ b/2020-09-14t14-24-41z.md
@@ -8,3 +8,4 @@ Statistics is the study concerning the collection, processing and analysis of
 data. Related notes to get into
 
 - [Hypothesis Testing](./2020-09-07t14-04-03z.md)
+- [Cross-validation](./2020-09-23t14-52-52z.md)
