--- a/2020-09-23t15-14-39z.md
+++ b/2020-09-23t15-14-39z.md
@@ -6,7 +6,7 @@ id: 2020-09-23t15-14-39z
 
 In [time series](./2020-09-23t15-18-55z.md) analysis, Autoregressive (AR)
 Models are models that predict the next time-step of a quantity by utilizing
-the previous time-step values of that same quantity.
+the previous time-step values (lags) of that same quantity.
 
 We can build an AR model by making use of [PACF](./2020-09-28t19-43-17z.md),
 analysis, determining which time lags have the strongest correlation for our
@@ -21,4 +21,5 @@ x_t = \beta_0 + \beta_1 x_{t-1} + \beta_3 x_{t-3} + \beta_4 x_{t-4}
 $$
 
 For a monthly time series that is sensitive to monthly, quarterly, four-monthly
-and yearly effects. We are then left with the tasks of fitting the weights. 
+and yearly effects. We are then left with the tasks of fitting the weights
+($\beta$). 
