--- a/2020-09-29t12-46-47z.md
+++ b/2020-09-29t12-46-47z.md
@@ -28,3 +28,8 @@ centred at 0 with a standard deviation of 1.
 There can be various "orders" of a moving-average model, denoted by the letter
 $q$ in the equations above. We typically refer to a moving-average model with
 the $MA(q)$ notation.
+
+Just how in [autoregressive models](./2020-09-23t15-14-39z.md) we make use of
+[PACF](./2020-09-28t19-43-17z.md) analysis for determining the order of the
+model, we can do the same in MA models by using
+[ACF](./2020-09-28t19-30-00z.md) analysis.
