--- a/2020-10-08t15-20-39z.md
+++ b/2020-10-08t15-20-39z.md
@@ -13,19 +13,26 @@ While AD can achieve the same (perfect) accuracy in its computed gradients as
 symbolic differentiation, it does not suffer from expression swell and doesn't
 require closed-form expressions.
 
-This is because unlike symbolic differentiation, AD is not concerned with
-computing an expression for the derivative, but instead is directly concerned
-with computing a value.
-
 This is achieved by acting directly on the intermediate variables defined in
 the implementation of the original function. AD understands that ultimately,
 any differentiable function will be composed of _primitives_, basic operations
 for which we know how to compute the derivative.
 
-Through the use of the chain rule, we can compute the value of our function's
+Through the use of the chain rule[^1], we can compute the value of our function's
 derivative by chaining the derivatives of the underlying primitives. 
 
 Autodiff has 2 main versions:
 
 - [forward-mode autodiff](./2020-10-08t15-33-40z.md)
 - [reverse-mode autodiff](./2020-10-08t15-31-20z.md)
+
+[^1]: Just a quick reminder of the chain rule in its most basic form:
+
+    For a function $f(x)$ differentiable at $x = c$ which can be written as
+    the composition of two functions $f(x) = (g \circ h)(x)$, the derivative
+    of $f$ with respect to $x$ at $x=c$ can be calculated with 
+
+    $$
+    f'(c) = (g \circ h)'(c) = g'(h(c)) \cdot h'(c)
+    $$
+
