add more to autodiff

--- a/2020-10-08t15-20-39z.md
+++ b/2020-10-08t15-20-39z.md
@@ -36,3 +36,13 @@ Autodiff has 2 main versions:
     f'(c) = (g \circ h)'(c) = g'(h(c)) \cdot h'(c)
     $$
 
+    _or_ for a function $w(t, u_1, \cdots, u_i)$
+
+    $$
+    \begin{aligned}
+\frac{\partial w}{\partial t}
+&= \sum_i \left(\frac{\partial w}{\partial u_i} \cdot \frac{\partial u_i}{\partial t}\right)\\
+&= \frac{\partial w}{\partial u_1} \cdot \frac{\partial u_1}{\partial t} + \frac{\partial w}{\partial u_2} \cdot \frac{\partial u_2}{\partial t} + \cdots
+\end{aligned}
+    $$
+
