missing closing parenthesis

--- a/2020-09-03t17-13-39z.md
+++ b/2020-09-03t17-13-39z.md
@@ -15,4 +15,4 @@ celestial body's own atmosphere) (astronomical scintillation)
 Turbulence causes scintillation because it perturbs the otherwise flat
 wavefronts of light.
 
-[Wikipedia Page](https://en.wikipedia.org/wiki/Scintillation_(astronomy)
+[Wikipedia Page](https://en.wikipedia.org/wiki/Scintillation_(astronomy))
