--- a/2020-09-03t17-13-39z.md
+++ b/2020-09-03t17-13-39z.md
@@ -9,7 +9,7 @@ to twinkle, i.e. have random variations in their luminosity, when observed
 through a medium. 
 
 This is due to the turbulence in the earth's atmosphere (atmospheric
-scintillation), or due to [turbulence]( in some other medium (such as the
+scintillation), or due to turbulence in some other medium (such as the
 celestial body's own atmosphere) (astronomical scintillation)
 
 Turbulence causes scintillation because it perturbs the otherwise flat
