teoria dei veicoli

--- a/2020-12-05t16-12-09z.md
+++ b/2020-12-05t16-12-09z.md
@@ -16,3 +16,4 @@ La patente B include le categorie AM, A1 e B1.
 La patente B richiede la conoscenza dei seguenti argomenti:
 
 - [I veicoli](./2020-12-05t16-33-32z.md)
+- [Domande/Cose che non mi sono chiare](./2020-12-05t17-17-10z.md)
