--- a/2020-12-06t18-13-41z.md
+++ b/2020-12-06t18-13-41z.md
@@ -18,3 +18,5 @@ Ecco i segnali verticali da conoscere
 
 - [strada deformata](./2020-12-08t09-15-40z.md)
 - [dosso](./2020-12-08t09-21-09z.md)
+- [cunetta](./2020-12-09t21-44-43z.md)
+- [curva pericolosa](./2020-12-09t21-53-51z.md)
