--- a/2020-12-08t09-15-40z.md
+++ b/2020-12-08t09-15-40z.md
@@ -1,6 +1,6 @@
 ---
 date: 2020-12-08 09:15:40
-title: Segnale Strada Deformata
+title: Segnale Verticale Strada Deformata
 id: 2020-12-08t09-15-40z
 ---
 
