doppia curva, pl

--- a/2020-12-06t18-13-41z.md
+++ b/2020-12-06t18-13-41z.md
@@ -20,3 +20,6 @@ Ecco i segnali verticali da conoscere
 - [dosso](./2020-12-08t09-21-09z.md)
 - [cunetta](./2020-12-09t21-44-43z.md)
 - [curva pericolosa](./2020-12-09t21-53-51z.md)
+- [doppia curva](./2020-12-10t21-34-53z.md)
+- [passaggio a livello con barriere](./2020-12-10t21-49-41z.md)
+- [passaggio a livello senza barriere](./2020-12-10t22-21-39z.md)
