--- a/2020-12-10t21-49-41z.md
+++ b/2020-12-10t21-49-41z.md
@@ -44,6 +44,8 @@ da un segnale acustico e due luci rosse lampeggianti alternanti.
 È vietato
 
 - impegnare il passaggio a livello se traffico intenso impedisce di sgomberarlo
+- la fermata e la sosta in corrispondenza/prossimità
+- il sorpasso se privo di semaforo
 
 Nel caso in cui ci si trovi ancora sui binari quando le barriere cominciano a
 chiudersi occorre:
