--- a/2020-12-10t22-21-39z.md
+++ b/2020-12-10t22-21-39z.md
@@ -7,11 +7,13 @@ id: 2020-12-10t22-21-39z
 ![](./images/pl-no-barriere.png)
 
 Presegnala a 150 metri un passaggio a livello privo di barriere o semibarriere.
-È seguito da una (per un solo binario) o due Croci di S. Andrea (due o più
-binari) in formato segnale.
-
-![](./images/croce-sandrea-segnale.png)
 
 Come nel [PL con barriere](./2020-12-10t21-49-41z.md), si riscontra una croce di
 S.Andrea dipinta sul pavimento e l'avvicinamento al PL è segnalato da pannelli
-distanziometrici.
+distanziometrici. In seguito ai pannelli distanziometrici si riscontra una (per un
+solo binario) o due Croci di S. Andrea (due o più binari) in formato segnale.
+
+![](./images/croce-sandrea-segnale.png)
+
+È necessario comportarsi come in presenza di un
+[PL con barriere](./2020-12-10t21-49-41z.md).
