--- a/2020-12-06t18-13-41z.md
+++ b/2020-12-06t18-13-41z.md
@@ -23,3 +23,4 @@ Ecco i segnali verticali da conoscere
 - [doppia curva](./2020-12-10t21-34-53z.md)
 - [passaggio a livello con barriere](./2020-12-10t21-49-41z.md)
 - [passaggio a livello senza barriere](./2020-12-10t22-21-39z.md)
+- [attraversamento tranviario](./2020-12-12t16-46-18z.md)
