--- a/2020-12-12t17-18-04z.md
+++ b/2020-12-12t17-18-04z.md
@@ -21,5 +21,5 @@ Qualora non si dia la precedenza ai pedoni, si incorre nella sottrazione di
 punti della patente.
 
 In assenza di strisce, se un pedone non accenna di darci la precedenza è
-necessario ridurre la velocità, avvisarlo del nostro passaggio e fermarsi
-tempestivamente per non investirlo.
+comunque necessario ridurre la velocità, avvisarlo del nostro passaggio e
+fermarsi tempestivamente per non investirlo.
