--- a/2020-12-06t18-13-41z.md
+++ b/2020-12-06t18-13-41z.md
@@ -25,3 +25,4 @@ Ecco i segnali verticali da conoscere
 - [passaggio a livello senza barriere](./2020-12-10t22-21-39z.md)
 - [attraversamento tranviario](./2020-12-12t16-46-18z.md)
 - [attraversamento pedonale](./2020-12-12t17-18-04z.md)
+- [attraversamento ciclabile](./2020-12-12t17-45-34z.md)
