--- a/2020-12-06t18-13-41z.md
+++ b/2020-12-06t18-13-41z.md
@@ -26,3 +26,4 @@ Ecco i segnali verticali da conoscere
 - [attraversamento tranviario](./2020-12-12t16-46-18z.md)
 - [attraversamento pedonale](./2020-12-12t17-18-04z.md)
 - [attraversamento ciclabile](./2020-12-12t17-45-34z.md)
+- [discesa pericolosa](./2020-12-12t17-56-29z.md)
