salita ripida in segnali verticali zettel

--- a/2020-12-06t18-13-41z.md
+++ b/2020-12-06t18-13-41z.md
@@ -27,4 +27,4 @@ Ecco i segnali verticali da conoscere
 - [attraversamento pedonale](./2020-12-12t17-18-04z.md)
 - [attraversamento ciclabile](./2020-12-12t17-45-34z.md)
 - [discesa pericolosa](./2020-12-12t17-56-29z.md)
-- [salita rapida](./2020-12-12t18-11-18z.md)
+- [salita ripida](./2020-12-12t18-11-18z.md)
