--- a/2020-12-06t18-13-41z.md
+++ b/2020-12-06t18-13-41z.md
@@ -28,3 +28,4 @@ Ecco i segnali verticali da conoscere
 - [attraversamento ciclabile](./2020-12-12t17-45-34z.md)
 - [discesa pericolosa](./2020-12-12t17-56-29z.md)
 - [salita ripida](./2020-12-12t18-11-18z.md)
+- [strettoia simmetrica](./2020-12-13t20-52-20z.md)
