--- a/2020-12-06t18-13-41z.md
+++ b/2020-12-06t18-13-41z.md
@@ -29,3 +29,4 @@ Ecco i segnali verticali da conoscere
 - [discesa pericolosa](./2020-12-12t17-56-29z.md)
 - [salita ripida](./2020-12-12t18-11-18z.md)
 - [strettoia simmetrica](./2020-12-13t20-52-20z.md)
+- [strettoia asimmetrica](./2020-12-13t21-11-41z.md)
