--- a/2020-12-06t18-13-41z.md
+++ b/2020-12-06t18-13-41z.md
@@ -30,3 +30,4 @@ Ecco i segnali verticali da conoscere
 - [salita ripida](./2020-12-12t18-11-18z.md)
 - [strettoia simmetrica](./2020-12-13t20-52-20z.md)
 - [strettoia asimmetrica](./2020-12-13t21-11-41z.md)
+- [ponte mobile](./2020-12-13t21-16-41z.md)
