--- a/2020-12-06t18-13-41z.md
+++ b/2020-12-06t18-13-41z.md
@@ -31,3 +31,4 @@ Ecco i segnali verticali da conoscere
 - [strettoia simmetrica](./2020-12-13t20-52-20z.md)
 - [strettoia asimmetrica](./2020-12-13t21-11-41z.md)
 - [ponte mobile](./2020-12-13t21-16-41z.md)
+- [banchina pericolosa](./2020-12-13t21-20-33z.md)
