--- a/2020-12-06t18-13-41z.md
+++ b/2020-12-06t18-13-41z.md
@@ -32,3 +32,4 @@ Ecco i segnali verticali da conoscere
 - [strettoia asimmetrica](./2020-12-13t21-11-41z.md)
 - [ponte mobile](./2020-12-13t21-16-41z.md)
 - [banchina pericolosa](./2020-12-13t21-20-33z.md)
+- [strada sdrucciolevole](./2020-12-13t21-28-54z.md)
