attenti ai bimbi

--- a/2020-12-06t18-13-41z.md
+++ b/2020-12-06t18-13-41z.md
@@ -33,3 +33,4 @@ Ecco i segnali verticali da conoscere
 - [ponte mobile](./2020-12-13t21-16-41z.md)
 - [banchina pericolosa](./2020-12-13t21-20-33z.md)
 - [strada sdrucciolevole](./2020-12-13t21-28-54z.md)
+- [segnale bambini](./2020-12-13t21-46-38z.md)
