--- a/2020-12-06t18-13-41z.md
+++ b/2020-12-06t18-13-41z.md
@@ -34,3 +34,4 @@ Ecco i segnali verticali da conoscere
 - [banchina pericolosa](./2020-12-13t21-20-33z.md)
 - [strada sdrucciolevole](./2020-12-13t21-28-54z.md)
 - [segnale bambini](./2020-12-13t21-46-38z.md)
+- [segnale animali](./2020-12-13t21-54-07z.md)
