--- a/2020-12-06t18-13-41z.md
+++ b/2020-12-06t18-13-41z.md
@@ -36,3 +36,4 @@ Ecco i segnali verticali da conoscere
 - [segnale bambini](./2020-12-13t21-46-38z.md)
 - [segnale animali](./2020-12-13t21-54-07z.md)
 - [doppio senso di circolazione](./2020-12-19t15-12-48z.md)
+- [rotatoria](./2020-12-19t15-57-37z.md)
