sbocco molo/argine

--- a/2020-12-06t18-13-41z.md
+++ b/2020-12-06t18-13-41z.md
@@ -37,3 +37,4 @@ Ecco i segnali verticali da conoscere
 - [segnale animali](./2020-12-13t21-54-07z.md)
 - [doppio senso di circolazione](./2020-12-19t15-12-48z.md)
 - [rotatoria](./2020-12-19t15-57-37z.md)
+- [sbocco su molo/margine](./2020-12-19t16-06-17z.md)
