--- a/2020-12-06t18-13-41z.md
+++ b/2020-12-06t18-13-41z.md
@@ -38,3 +38,4 @@ Ecco i segnali verticali da conoscere
 - [doppio senso di circolazione](./2020-12-19t15-12-48z.md)
 - [rotatoria](./2020-12-19t15-57-37z.md)
 - [sbocco su molo/margine](./2020-12-19t16-06-17z.md)
+- [materiale instabile](./2020-12-19t16-22-46z.md)
