--- a/2020-12-06t18-13-41z.md
+++ b/2020-12-06t18-13-41z.md
@@ -39,3 +39,4 @@ Ecco i segnali verticali da conoscere
 - [rotatoria](./2020-12-19t15-57-37z.md)
 - [sbocco su molo/margine](./2020-12-19t16-06-17z.md)
 - [materiale instabile](./2020-12-19t16-22-46z.md)
+- [caduta massi](./2020-12-19t16-44-39z.md)
