--- a/2020-12-06t18-13-41z.md
+++ b/2020-12-06t18-13-41z.md
@@ -41,3 +41,4 @@ Ecco i segnali verticali da conoscere
 - [materiale instabile](./2020-12-19t16-22-46z.md)
 - [caduta massi](./2020-12-19t16-44-39z.md)
 - [segnale semaforo](./2020-12-19t16-48-33z.md)
+- [segnale aereomobili](./2020-12-19t17-08-11z.md)
