--- a/2020-12-06t18-13-41z.md
+++ b/2020-12-06t18-13-41z.md
@@ -42,3 +42,4 @@ Ecco i segnali verticali da conoscere
 - [caduta massi](./2020-12-19t16-44-39z.md)
 - [segnale semaforo](./2020-12-19t16-48-33z.md)
 - [segnale aereomobili](./2020-12-19t17-08-11z.md)
+- [forte vento laterale](./2020-12-19t17-11-25z.md)
