--- a/2020-12-06t18-13-41z.md
+++ b/2020-12-06t18-13-41z.md
@@ -43,3 +43,4 @@ Ecco i segnali verticali da conoscere
 - [segnale semaforo](./2020-12-19t16-48-33z.md)
 - [segnale aereomobili](./2020-12-19t17-08-11z.md)
 - [forte vento laterale](./2020-12-19t17-11-25z.md)
+- [pericolo di incendio](./2020-12-19t17-17-49z.md)
