--- a/2020-12-20t16-54-28z.md
+++ b/2020-12-20t16-54-28z.md
@@ -19,3 +19,8 @@ id: 2020-12-20t16-54-28z
 
 Da notare che non occorre fermarsi all'incrocio se rallentando si ha modo di
 vedere che non vi sono veicoli in arrivo da ambi le parti.
+
+## Preavviso di dare precedenza
+
+Se accompagnato da un pannello integrativo di distanza, il segnale viene
+interpretato come segnale di _preavviso_.
