--- a/2020-12-20t16-42-15z.md
+++ b/2020-12-20t16-42-15z.md
@@ -12,3 +12,4 @@ In seguito i segnali di precedenza da sapere:
 
 - [dare precedenza](./2020-12-20t16-54-28z.md)
 - [fermarsi e dare precedenza](./2020-12-20t17-24-07z.md)
+- [intersezione con precedenza a destra](./2020-12-20t17-50-16z.md)
