--- a/2020-12-20t16-42-15z.md
+++ b/2020-12-20t16-42-15z.md
@@ -13,3 +13,5 @@ In seguito i segnali di precedenza da sapere:
 - [dare precedenza](./2020-12-20t16-54-28z.md)
 - [fermarsi e dare precedenza](./2020-12-20t17-24-07z.md)
 - [intersezione con precedenza a destra](./2020-12-20t17-50-16z.md)
+- [dare precedenza nei sensi unici alternati](./2020-12-20t18-03-17z.md)
+- [diritto precedenza nei sensi unici alternati](./2020-12-20t18-09-34z.md)
