--- a/2020-12-20t16-42-15z.md
+++ b/2020-12-20t16-42-15z.md
@@ -15,3 +15,4 @@ In seguito i segnali di precedenza da sapere:
 - [intersezione con precedenza a destra](./2020-12-20t17-50-16z.md)
 - [dare precedenza nei sensi unici alternati](./2020-12-20t18-03-17z.md)
 - [diritto precedenza nei sensi unici alternati](./2020-12-20t18-09-34z.md)
+- [intersezione con diritto di precedenza](./2020-12-20t18-23-33z.md)
