--- a/2020-12-20t16-42-15z.md
+++ b/2020-12-20t16-42-15z.md
@@ -16,4 +16,5 @@ In seguito i segnali di precedenza da sapere:
 - [dare precedenza nei sensi unici alternati](./2020-12-20t18-03-17z.md)
 - [diritto precedenza nei sensi unici alternati](./2020-12-20t18-09-34z.md)
 - [intersezione con diritto di precedenza](./2020-12-20t18-23-33z.md)
-- [Intersezione a T con diritto di precedenza](./2020-12-21t17-32-47z.md)
+- [intersezione a T con diritto di precedenza](./2020-12-21t17-32-47z.md)
+- [confluenza](./2020-12-21t17-41-37z.md)
