segnale diritto precedenza

--- a/2020-12-20t16-42-15z.md
+++ b/2020-12-20t16-42-15z.md
@@ -18,3 +18,8 @@ In seguito i segnali di precedenza da sapere:
 - [intersezione con diritto di precedenza](./2020-12-20t18-23-33z.md)
 - [intersezione a T con diritto di precedenza](./2020-12-21t17-32-47z.md)
 - [confluenza](./2020-12-21t17-41-37z.md)
+- [diritto precedenza](./2020-12-21t17-46-03z.md)
+- [fine diritto precedenza](./2020-12-21t18-02-10z.md)
+
+Da notare che bisogna comunque dare sempre la precedenza ai veicoli che hanno in
+funzione il lampeggiante blu e sirena (tipo polizia/ambulanza).
