--- a/2020-12-21t20-51-35z.md
+++ b/2020-12-21t20-51-35z.md
@@ -8,4 +8,5 @@ I segnali di divieto generici sono segnali che si rivolgono a tutti i veicoli
 e vengono elencati in seguito:
 
 - [divieto di transito](./2020-12-21t20-54-53z.md)
+- [senso vietato](./2020-12-21t21-24-28z.md)
 
