--- a/2020-12-21t20-51-35z.md
+++ b/2020-12-21t20-51-35z.md
@@ -9,4 +9,5 @@ e vengono elencati in seguito:
 
 - [divieto di transito](./2020-12-21t20-54-53z.md)
 - [senso vietato](./2020-12-21t21-24-28z.md)
+- [divieto di sorpasso](./2020-12-21t21-28-13z.md)
 
