--- a/2020-12-21t20-51-35z.md
+++ b/2020-12-21t20-51-35z.md
@@ -4,10 +4,10 @@ title: Segnali di Divieto Generici
 id: 2020-12-21t20-51-35z
 ---
 
-I segnali di divieto generici sono segnali che si rivolgono a tutti i veicoli
-e vengono elencati in seguito:
+I segnali di divieto generici sono segnali che si rivolgono a tutti i veicoli e
+vengono elencati in seguito:
 
 - [divieto di transito](./2020-12-21t20-54-53z.md)
 - [senso vietato](./2020-12-21t21-24-28z.md)
 - [divieto di sorpasso](./2020-12-21t21-28-13z.md)
-
+- [distanziamento minimo](./2020-12-22t13-43-31z.md)
