divieto segnalazioni acustiche

--- a/2020-12-21t20-51-35z.md
+++ b/2020-12-21t20-51-35z.md
@@ -11,3 +11,4 @@ vengono elencati in seguito:
 - [senso vietato](./2020-12-21t21-24-28z.md)
 - [divieto di sorpasso](./2020-12-21t21-28-13z.md)
 - [distanziamento minimo](./2020-12-22t13-43-31z.md)
+- [divieto segnalazioni acustiche](./2020-12-22t13-54-33z.md)
