limite max di velocità

--- a/2020-12-21t20-51-35z.md
+++ b/2020-12-21t20-51-35z.md
@@ -12,3 +12,4 @@ vengono elencati in seguito:
 - [divieto di sorpasso](./2020-12-21t21-28-13z.md)
 - [distanziamento minimo](./2020-12-22t13-43-31z.md)
 - [divieto segnalazioni acustiche](./2020-12-22t13-54-33z.md)
+- [limite massimo di velocità](./2020-12-22t14-05-04z.md)
