divieto specifico veicolo pesanti sorpassi mcpc

--- a/2020-12-20t16-42-39z.md
+++ b/2020-12-20t16-42-39z.md
@@ -8,6 +8,6 @@ I segnali di divieto sono segnali di forma circolare che vietano determinate
 azioni o impongono limitazioni. Si suddividono in
 
 - [divieti generici](./2020-12-21t20-51-35z.md)
-- [divieti specifici]
+- [divieti specifici](./2020-12-22t15-55-54z.md)
 - [di limitazione]
 - [di fine divieto]
