divieto di transito ai pedoni

--- a/2020-12-22t15-55-54z.md
+++ b/2020-12-22t15-55-54z.md
@@ -9,3 +9,4 @@ I segnali di divieto specifici sono segnali che si rivolgono a
 in seguito:
 
 - [divieto di sorpasso veicoli pesanti](./2020-12-22t15-59-02z.md)
+- [transito vietato a pedoni](./2020-12-22t16-24-45z.md)
