no transito veicolo braccia

--- a/2020-12-22t15-55-54z.md
+++ b/2020-12-22t15-55-54z.md
@@ -12,3 +12,4 @@ in seguito:
 - [transito vietato a pedoni](./2020-12-22t16-24-45z.md)
 - [transito vietato a veicoli a trazione animale](./2020-12-22t16-28-13z.md)
 - [transito vietato a velocipedi](./2020-12-22t17-03-35z.md)
+- [transito vietato a veicoli a braccia](./2020-12-22t17-08-01z.md)
