--- a/2020-12-22t15-55-54z.md
+++ b/2020-12-22t15-55-54z.md
@@ -13,3 +13,4 @@ in seguito:
 - [transito vietato a veicoli a trazione animale](./2020-12-22t16-28-13z.md)
 - [transito vietato a velocipedi](./2020-12-22t17-03-35z.md)
 - [transito vietato a veicoli a braccia](./2020-12-22t17-08-01z.md)
+- [transito vietato ai motocicli](./2020-12-22t17-10-47z.md)
