--- a/2020-12-22t15-55-54z.md
+++ b/2020-12-22t15-55-54z.md
@@ -16,3 +16,4 @@ in seguito:
 - [transito vietato ai motocicli](./2020-12-22t17-10-47z.md)
 - [transito vietato a tutti gli autoveicoli](./2020-12-22t17-19-40z.md)
 - [transito vietato agli autobus](./2020-12-22t17-30-30z.md)
+- [transito vietato a veicoli pesanti](./2020-12-22t17-34-22z.md)
