--- a/2020-12-22t15-55-54z.md
+++ b/2020-12-22t15-55-54z.md
@@ -17,3 +17,4 @@ in seguito:
 - [transito vietato a tutti gli autoveicoli](./2020-12-22t17-19-40z.md)
 - [transito vietato agli autobus](./2020-12-22t17-30-30z.md)
 - [transito vietato a veicoli pesanti](./2020-12-22t17-34-22z.md)
+- [transito vietato a veicoli trainanti un rimorchio](./2020-12-22t17-45-40z.md)
