--- a/2020-12-22t15-55-54z.md
+++ b/2020-12-22t15-55-54z.md
@@ -19,3 +19,4 @@ in seguito:
 - [transito vietato a veicoli pesanti](./2020-12-22t17-34-22z.md)
 - [transito vietato a veicoli trainanti un rimorchio](./2020-12-22t17-45-40z.md)
 - [transito vietato alle macchine agricole](./2020-12-22t18-00-12z.md)
+- [transito vietato ai veicoli trasportanti di merci pericolose](./2020-12-22t18-02-59z.md)
