vietato transito transporto esplosivi

--- a/2020-12-22t15-55-54z.md
+++ b/2020-12-22t15-55-54z.md
@@ -20,3 +20,4 @@ in seguito:
 - [transito vietato a veicoli trainanti un rimorchio](./2020-12-22t17-45-40z.md)
 - [transito vietato alle macchine agricole](./2020-12-22t18-00-12z.md)
 - [transito vietato ai veicoli trasportanti di merci pericolose](./2020-12-22t18-02-59z.md)
+- [transito vietato ai veicoli trasportanti di esplosivi/infiammofili](./2020-12-22t18-07-05z.md)
