contamini acqua? allora non passi zio

--- a/2020-12-22t15-55-54z.md
+++ b/2020-12-22t15-55-54z.md
@@ -21,3 +21,4 @@ in seguito:
 - [transito vietato alle macchine agricole](./2020-12-22t18-00-12z.md)
 - [transito vietato ai veicoli trasportanti di merci pericolose](./2020-12-22t18-02-59z.md)
 - [transito vietato ai veicoli trasportanti di esplosivi/infiammofili](./2020-12-22t18-07-05z.md)
+- [transito vietato ai veicoli trasportanti merci che potrebbero contaminare l'acqua](./2020-12-22t18-12-22z.md)
