--- a/2020-12-20t16-42-39z.md
+++ b/2020-12-20t16-42-39z.md
@@ -9,5 +9,5 @@ azioni o impongono limitazioni. Si suddividono in
 
 - [divieti generici](./2020-12-21t20-51-35z.md)
 - [divieti specifici](./2020-12-22t15-55-54z.md)
-- [di limitazione]
+- [di limitazione](./2020-12-22t18-16-51z.md)
 - [di fine divieto]
