transito vietato altezza

--- a/2020-12-22t18-16-51z.md
+++ b/2020-12-22t18-16-51z.md
@@ -7,4 +7,5 @@ id: 2020-12-22t18-16-51z
 I seguenti segnali di divieto comportano limitazioni alle dimensioni e alla
 massa dei veicoli degli utenti.
 
-- [Transito vietato a larghezze superiori a ... m](./2020-12-22t18-20-02z.md)
+- [transito vietato a larghezze superiori a ... m](./2020-12-22t18-20-02z.md)
+- [transito vietato ad altezze superiori a ...m](./2020-12-22t18-30-25z.md)
