--- a/2020-12-22t18-16-51z.md
+++ b/2020-12-22t18-16-51z.md
@@ -9,3 +9,4 @@ massa dei veicoli degli utenti.
 
 - [transito vietato a larghezze superiori a ... m](./2020-12-22t18-20-02z.md)
 - [transito vietato ad altezze superiori a ...m](./2020-12-22t18-30-25z.md)
+- [transito vietato a lunghezze superiori a ...m](./2020-12-23t14-35-45z.md)
