--- a/2020-12-23t15-07-23z.md
+++ b/2020-12-23t15-07-23z.md
@@ -7,5 +7,6 @@ id: 2020-12-23t15-07-23z
 ![cerchio bianco bordo rosso con numero di
 tonnellate](./images/divieto-transito-massa.png)
 
-Vieta il transito ai veicoli aventi una massa effettiva (la massa del veicolo
-relativa al momento del transito) superiore a quella indicata dal segnale.
+Vieta il transito ai veicoli aventi una
+[massa effettiva](./2020-12-23t15-16-21z.md) superiore a quella indicata dal
+segnale.
