--- a/2020-12-23t16-11-43z.md
+++ b/2020-12-23t16-11-43z.md
@@ -10,3 +10,6 @@ nera](./images/fine-divieto-sorpasso.png)
 Indica il punto in cui termina la
 [prescrizione di divieto di sorpasso](./2020-12-21t21-28-13z.md) precedentemente
 imposta.
+
+![cerchio bianco disegno macchina e camion sbarrati da sbarra
+nera](./images/fine-divieto-sorpasso-pesanti.png)
