--- a/2020-12-23t16-23-36z.md
+++ b/2020-12-23t16-23-36z.md
@@ -6,3 +6,4 @@ id: 2020-12-23t16-23-36z
 
 - [divieto di sosta](./2020-12-23t16-24-49z.md)
 - [divieto di fermata](./2020-12-23t16-35-47z.md)
+- [parcheggio](./2020-12-23t17-48-48z.md)
