--- a/2020-12-23t16-23-36z.md
+++ b/2020-12-23t16-23-36z.md
@@ -8,3 +8,4 @@ id: 2020-12-23t16-23-36z
 - [divieto di fermata](./2020-12-23t16-35-47z.md)
 - [parcheggio](./2020-12-23t17-48-48z.md)
 - [area di parcheggio a pagamento](./2020-12-23t17-59-55z.md)
+- [area di parcheggio regolata con disco orario](./2020-12-23t18-29-21z.md)
