altri divieti di sosta

--- a/2020-12-23t16-24-49z.md
+++ b/2020-12-23t16-24-49z.md
@@ -14,3 +14,8 @@ id: 2020-12-23t16-24-49z
 - Sulle strade urbane, è valido dalle 8:00 alle 20:00 salvo diversa indicazione.
 - Sulle strade extraurbane, il divieto è permanente, salvo diversa indicazione.
 - Cessa di validità al primo incrocio se non ripetuto.
+- È anche usato per segnalare
+  - il passo carrabile
+  - la sosta consentita solo a particolari categorie (e.g. disabili)
+  - sosta flessibile in base all'ora del giorno
+  - divieti di sosta temporanei
