--- a/2020-12-23t18-38-27z.md
+++ b/2020-12-23t18-38-27z.md
@@ -11,3 +11,4 @@ dal colore di fondo blu e il simbolo bianco.
 - [direzioni consentite](./2020-12-23t19-38-51z.md)
 - [passaggio obbligatorio](./2020-12-23t19-41-37z.md)
 - [preavviso direzione obbligatoria a destra/sinistra](./2020-12-23t19-55-15z.md)
+- [passaggi consentiti](./2020-12-23t19-59-54z.md)
