--- a/2020-12-23t18-38-27z.md
+++ b/2020-12-23t18-38-27z.md
@@ -12,3 +12,4 @@ dal colore di fondo blu e il simbolo bianco.
 - [passaggio obbligatorio](./2020-12-23t19-41-37z.md)
 - [preavviso direzione obbligatoria a destra/sinistra](./2020-12-23t19-55-15z.md)
 - [passaggi consentiti](./2020-12-23t19-59-54z.md)
+- [senso di rotatoria](./2020-12-23t20-02-38z.md)
