first wave of last minute notes

--- a/2020-12-24t17-21-21z.md
+++ b/2020-12-24t17-21-21z.md
@@ -1,7 +1,244 @@
 ---
 date: 2020-12-24 17:21:21
-title: Patente B - Appunti Last Minute
+title: Patente B - Appunti Last Minute (lol)
 id: 2020-12-24t17-21-21z
 ---
 
-Write
+## Segnaletica
+
+- **Triangolo bianco con bordo rosso, punta in su**: Segnali di Pericolo
+- **Triangolo bianco con bordo rosso, punta in giù**: Segnali di Precedenza
+- **Cerchio bianco con bordo rosso**: Segnali di divieto
+- **Cerchio blu**: Segnali d'obbligo
+
+Il cambio di sfondo da bianco a giallo indica che la segnalazione è temporanea
+
+Invece, riguardo segnali di indicazione rettangolari:
+
+- **verde**: autostrade
+- **blu**: strade extraurbane
+- **bianco**: strade o destinazioni urbane
+- **giallo**: segnali temporanei
+- **marrone**: luogo di interesse storico/turistico/culturale
+- **nero**: zone industriali
+- **arancio**: per scuolabus e taxi
+- **rosso**: SOS e incidenti
+
+### Altri appunti segnaletica
+
+- due suoni brevi del fischietto del vigile del traffico danno il via libera
+- i segnali orizzontali sono quelli tracciati sulla strada.
+  - la striscia bianca continue affiancata da una discontinua indica che solo
+    una delle due corsie può sorpassare, superando entrambe le linee: quella con
+    la striscia discontinua a sinistra.
+  - nella zona riservata alla fermata di autobus/filobus/autosnodati
+    - i taxi non possono sostare
+    - è consentito comunque circolarci sopra
+    - la fermata è consentita
+
+## Norme Varie (Responsabilità Penali, etc.)
+
+## Distanza di Sicurezza
+
+Dipende da
+
+- velocità
+- stato del conducente
+- condizioni atmosferiche
+- traffico
+- pendenze
+- tipo e stato del veicolo
+- sistemazione ed entità del carico
+
+In situazioni ottimali, la distanza di sicurezza minima deve essere almeno
+uguale allo spazio di reazione (SR), altrimenti deve essere almeno uguale allo
+spazio totale di arresto (SA).
+
+## Dettagli Patenti Varie
+
+### Revisione Patente
+
+## Spie e Luci varie
+
+### Spie
+
+#### Spie luci (cioè dei fari)
+
+- luci di posizione: due faretti in senso opposto - colore verde
+- anabbaglianti: faro diagonale in basso - colore verde
+- abbaglianti: faro orizzontale - colore blu
+- frecce: frecce orizzontali opposte - colore verde
+- luce targa: lampadina molto tonda - colore verde
+- proiettore retromarcia: faro con lettera R - colore verde
+- luce posteriore nebbia: faro orizzontale con linea irregolare che lo
+  attraversa - colore giallo
+- doppie frecce: triangolo dentro triangolo - colore rosso
+- anabbaglianti anteriori: disegno anabbaglianti con linea irregolare che lo
+  attraversa - colore verde
+- luci di sosta (non di posizione): P con raggi - colore verde
+
+### Luci veicolo
+
+#### Parte Anteriore
+
+- **luci di posizione**: da accendere mezz'ora dopo il tramonto/prima dell'alba.
+  Vanno abbinate con altre luci durante la marcia.
+- **luci anabbaglianti**: proiettori normali di luce bianca da usare in marcia
+  al buio.
+- **luci abbaglianti**: proiettori più forti da usare fuori dai centri abitati.
+  Non accecare gli altri per favore.
+- **luci di direzione**: 'e frecce (gialle)
+
+#### Parte Posteriore
+
+- luci di posizione rosse
+- luce bianca per illuminare targa
+- 'e frecce nartra vorta (sempre gialle)
+- luci di arresto rosse
+- proiettori retromarcia, luce bianca
+- catadiottri di riflesso rossi non triangolari
+- luci per nebbia rosse
+
+#### Parte Laterale
+
+- altre frecce gialle
+- luci di posizione giallo-ambra per veicoli lunghi (> 6m)
+- catadiottri di riflesso giallo-ambra per veicoli lunghi idem
+
+### Luci Rimorchio
+
+#### Parte Rimorchio Anteriore
+
+- catadiottri bianchi non triangolari
+- luci di posizione bianche per rimorchi larghi (> 1.60 m)
+
+#### Parte Rimorchio Posteriore
+
+- luci di posizione rosse
+- luci di arresto rosse
+- catadiottri trinangolari rossi
+- le frecce
+- luce bianca illuminazione targa
+- luce fendinebbia rossa
+
+#### Parte Rimorchio Laterale
+
+- luci di posizione gialle, rimorchi lunghi
+- catadiottri gialli non triangolari
+
+## Segnale Triangolare + Segnalazione luminosa di Pericolo
+
+La segnalazione luminosa di pericolo (doppie frecce) va azionata nei seguenti
+casi:
+
+- ingombro della carreggiata
+- durante il tempo necessario per sistemare o riprendere il triangolo
+- quando il veicolo viene trainato
+- quanto il veicolo deve procedere ad una velocità ridotta a causa di avaria
+- in caso di improvvisi rallentamenti o incolonnamenti
+- quando la fermata costituisce un pericolo per tutti gli altri utenti della
+  strada.
+
+Tutti gli autoveicoli devono avere in dotazione il _segnale mobile di pericolo_
+(triangolo).
+
+- È munito di sostegno.
+- va utilizzato solo fuori dai centri abitati
+- segnala
+  - veicolo fermo su carreggiata
+    - per avaria
+    - danneggiamento
+  - la caduta di un carico che non può essere tempestivamente rimosso
+
+Il segnale deve essere posto seguendo le seguenti indicazioni:
+
+- sulla corsia occupata
+- almeno 50 m dietro l'ostacolo che segnala
+- ad almeno 1 m dal bordo esterno della carreggiata
+- visibile ad almeno 100 m per i veicoli che sopraggiungono
+
+L'uso è obbligatorio nelle seguenti situazioni:
+
+- di giorno
+  - se l'ostacolo in se non è visibile ad almeno 100 m dai conducenti che
+    sopraggiungono
+- di notte
+  - quando il veicolo fermo non è visibile
+  - quando le luci posteriori di posizione o di emergenza non funzionano
+  - in caso di caduta del carico
+- di giorno e di notte sulle autostrade e/o strade extraurbane principali
+  - quando il veicolo non può essere spostato sulla corsia di emergenza o sulla
+    piazzola di sosta
+
+Una volta posto il segnale mobile di emergenza, è necessario
+
+- provvedere se possibile a rimuovere l'ostacolo
+  - spingendo il veicolo se è il veicolo stesso, in stato di avaria, ad essere
+    l'ostacolo.
+- rendere libero il passaggio per quanto possibile
+- avvertire con segnalazioni manuali la presenza dell'ostacolo ai veicoli
+  provenienti dall'altro senso di marcia (che quindi non vedono il triangolo)
+- spargere terra, sabbia o altro idoneo materiale in caso di caduta di sostanze
+  viscidi, infiammabili o pericolose.
+
+I conducenti di velocipedi, ciclomotori a due ruote e motocicli sono _esclusi_
+all'obbligo di presegnalare il veicolo fermo con il triangolo.
+
+### Indumenti alta visibilità
+
+Quando si posiziona il segnale triangolare mobile di pericolo, è sempre
+obbligatorio indossare indumenti ad alta visibilità, con la dicitura "EN 471"
+
+## Freni
+
+## Casi Consentiti di Sorpasso
+
+## In caso di incidente
+
+## Limiti di Velocità
+
+I limiti massimi di velocità generali in Italia sono:
+
+- per **autoveicoli** fino a 3.5 tonnellate:
+  - **centri abitati**: 50 km/h
+    - le strade urbane di scorrimento potrebbero avere i limiti fino a 70 km/h
+  - **strade extraurbane secondarie e locali**: 90 km/h
+  - **strade extraurbane principali**: 110 km/h
+    - scende a 90 km/h in caso si pioggia/neve/nebbia/grandine
+  - **autostrade**: 130 km/h
+    - scende a 110 km/h in caso si pioggia/neve/nebbia/grandine
+- per **macchine agricole**:
+  - **cingolate**: 15 km/h
+  - **con pneumatici**: 40 km/h
+- per i **ciclomotori** e **ciclomotori leggeri**:
+  - 45 km/h ovunque
+- per **quadricicli non leggeri**
+  - fuori dai centri urbani: 80 km/h
+- **autobus fino a 8t e camion fino a 3.5t**
+  - fuori centri abitati: 80 km/h
+  - autostrade: 100 km/h
+- per autotreni, autoarticolati, autosnodati, autoveicoli trainanti caravan,
+  rimorchi per imbarcazioni, cavalli o motocicli, autoveicoli di massa
+  complessiva superiore a 12 tonnellate:
+  - fuori centri abitati: 70 km/h
+  - autostrade: 80 km/h
+- **mezzi d'opera a pieno carico**:
+  - nei centri abitati: 60 km/h
+  - fuori dai centri abitati: 70 km/h
+- **autoveicoli carichi di merci pericolose:**
+  - nei centri abitati: 30 km/h
+  - fuori centri abitati 50 km/h
+
+Altre note
+
+- il limite massimo che può essere segnalato è di 150 km/h su autostrade con
+  corsie di emergenza e Tutor.
+
+## Assistenza Infortunati Stradali
+
+## Formule SR/SF/SA
+
+- **Spazio di reazione (SR)**: $(velocità/10) * 3$
+- **Spazio di frenatura (SF)**: $(V^2)/(250 * f)$
+  - $f$ è il coefficiente di aderenza
+- **Spazio totale arresto (SA)**: $SR + SF /approx (V/10)^2$
