--- a/2020-12-24t17-21-21z.md
+++ b/2020-12-24t17-21-21z.md
@@ -38,6 +38,22 @@ Invece, riguardo segnali di indicazione rettangolari:
 
 ## Norme Varie (Responsabilità Penali, etc.)
 
+Ecco le varie responsabilità
+
+- **responsabilità amministrativa**: quando non si rispettano le norme del
+  codice della strada
+  - pagare una multa
+- **responsabilità civile**:
+  - danni a persone, cose ed animali vanno risarciti
+  - grava su proprietario + conducente
+  - incidenti su aree pubbliche
+- **responsabilità penale**:
+  - provocando lesioni gravi a persone
+  - omicidio colposo
+  - violate norme contemplate dal Codice Penale
+  - rispondere penalmente del proprio comportamento
+  - grava solo sul conducente
+
 ## Distanza di Sicurezza
 
 Dipende da
@@ -54,9 +70,193 @@ In situazioni ottimali, la distanza di sicurezza minima deve essere almeno
 uguale allo spazio di reazione (SR), altrimenti deve essere almeno uguale allo
 spazio totale di arresto (SA).
 
+### Formule SR/SF/SA
+
+- **Spazio di reazione (SR)**: $(velocità/10) * 3$
+- **Spazio di frenatura (SF)**: $(V^2)/(250 * f)$
+  - $f$ è il coefficiente di aderenza
+- **Spazio totale arresto (SA)**: $SR + SF /approx (V/10)^2$
+
 ## Dettagli Patenti Varie
 
+### Tipi di Patenti
+
+- **Patente AM**
+  - ciclomotori 2, 3, 4 ruote
+  - cilindrata non superiore a 50 cm^3
+  - velocità non superiore a 45 km/h
+  - massa a vuoto non superiore a 400 kg
+  - potenza non superiore a 6 kW
+  - dai 14 anni
+- **Patente A1**
+  - motocicli
+    - cilindrata fino a 125 cm^3
+    - potenza non superiore a 11 kW
+  - tricicli
+    - potenza non superiore a 15 kW
+  - macchine agricole
+    - che non superano i limiti di sagoma previsti per motoveicoli
+    - m.c.p.c. di 2.5t
+    - velocità non superiore a 40 km/h
+  - include patente AM
+  - dai 16 anni
+- **Patente A2**
+  - motocicli
+    - potenza fino a 35 kW
+    - potenza/peso non superiore a 0.2 kW/kg
+  - tricicli
+    - potenza massima di 15 kW
+  - macchine agricole
+    - che non superano i limiti di sagoma previsti per motocicli
+  - si trasforma in Patente A dopo due anni
+  - a partire dai 18 anni
+  - include AM e A1
+- **Patente A**
+  - motocicli
+    - tutti
+  - tricicli
+    - tutti
+  - dai 20 anni con accesso graduale
+  - dai 24 anni con accesso diretto
+  - include patente AM, A1 e A2
+- **Patente B1**
+  - quadricicli non leggeri
+  - dai 16 anni
+- **Patente B**
+  - autoveicoli
+    - di massa non superiore a 3.5t
+    - trasporto di non più di 8 persone oltre al conducente (totale 9)
+  - autocaravan (camper)
+    - massa non superiore a 3.5t
+  - macchine agricole
+    - anche quelle eccezionali
+  - autovetture (le macchine normali praticamente)
+    - trainanti rimorchi, leggeri ( meno 750 kg) e non
+    - massa del complesso deve essere comunque meno di 3.5t
+  - autocarri (camion)
+    - meno di 3.5t
+  - quadricicli
+    - tutti
+  - include patenti AM, A1 e B1
+  - a partire dai 18 anni
+- **Patente B codice armonizzato 96 (B+)**
+  - Autovetture trainanti rimorchio non leggero
+    - massa complesso meno di 425t
+  - conseguita con o dopo patente B, con prova di guida su specifico veicolo
+- **Patente BE**
+  - Complessi di veicoli, autotreni
+    - composti da autoveicolo con massa massima di 3.5t + rimorchio con massa
+      massima di 3.5t
+    - massa complesso può quindi superare 4.25t
+  - si ottiene facendo prova pratica dopo patente B
+  - include patente B e B codice armonizzato
+  - treni turistici con non più di 8 passeggeri
+- **Patente C1**
+  - autoveicoli (escluse categorie D e D1)
+    - massa più di 3.5t ma meno di 7.5t
+    - possono trainare rimorchio fino a 750 kg
+  - macchine operatrici eccezionali
+  - dai 18 anni
+- **Patente C1E**
+  - complessi di veicoli composti da
+    - motrice di categoria B + rimorchio/semirimorchio con massa massima
+      superiore di 3.5t purché massa complesso non superi 12t
+    - oppure motrice di categoria C1 + rimorchio/semirimorchio con massa massima
+      maggiore di 750 kg, purché massa complesso non super 12t
+  - a partire dai 18 anni
+- **Patente C**
+  - autoveicoli escluse D1 e D
+    - massa superiore a 3.5t
+    - possono trainare rimorchi più di 750 kg
+  - dai 21 anni
+- **Patente D1**
+  - autoveicoli
+    - fino a 17 posti incluso conducente
+    - lunghezza fino a 8 metri
+    - possono trainare rimorchio non superiore a 750 kg
+  - dai 18 anni
+- **Patente D1E**
+  - complessi di veicoli con matrice di categoria D1 e rimorchio massa superiore
+    a 750 kg
+  - dai 21 anni
+- **Patente D**
+  - autoveicoli
+    - con posti superiore a 9 incluso conducente
+    - possono trainare rimorchio fino a 750 kg
+  - dai 24 anni
+- **Patente DE**
+  - complessi di veicoli con motrice di categoria D e rimorchio massa superiore
+    750 kg
+  - trenini turistici con più di 8 passeggeri
+  - dai 24 anni
+
+### Limiti Patente
+
+- Per Patenti A2, A, B1 e B, per i primi 3 anni:
+  - limite di velocità
+    - in autostrada 100 km/h
+    - in strade extraurbane principali 90 km/h
+- Per Patente B, primo anno
+  - potenza specifica non superiore a 55 kW/t
+  - per autovetture (categoria M1), potenza massima di 70 kW
+
+### Durata Patente B
+
+- Patente B rilasciata ha una validità di/in base età utente:
+  - fino a 50 anni: 10 anni
+  - tra 50 anni e 70 anni: 5 anni
+  - oltre 70 anni: 3 anni
+  - oltre 80 anni: 2 anni
+- si rinnova con la data di compleanno del titolare
+- per rinnovare: accertamento sanitario eseguito da medico autorizzato
+
 ### Revisione Patente
+
+- significa re-verificare se l'utente è effettivamente a conoscenza delle norme
+  della strada
+- può essere disposta
+  - quando sorgono dubbi sui requisiti fisici/psichici
+  - a seguito di incidente pesante
+  - a seguito di guida in stato di ebbrezza
+  - a seguito dello azzeramento dei punti
+- non superare la revisiona risulta nella revoca della patente
+- finché non si è sottoposti ad una revisione disposta, la patente è sospesa
+  - circolare con la patente sospesa risulta nella revoca della patente
+
+### Ritiro Patente
+
+Succede quando
+
+- si guida con patente sospesa
+- si guida con patente scaduta
+- si guida in stato di ebbrezza
+- sono derivate lesioni a persone a seguito di incidente
+- carico mal disposto non sistemato dopo invito degli organi della polizia
+
+### Sospensione Patente
+
+Succede quando
+
+- temporanea perdita dei requisiti fisici/psichici
+- si supera il limite massimo di 40 km/h
+- si supera il limite massimo di 60 km/h
+- si circola contromano in tratti pericolosi di strada
+- si circola su corsie di emergenza
+- si rifiuta di sottoporsi a accertamenti stato di ebbrezza
+- si guida in stato di di alterazione psicofisica
+- il conducente non presta soccorso ai feriti investiti
+- si circola abusivamente con veicolo sottoposto a sequestro
+- si circola con veicolo che supera i limiti della patente
+- si circola con la carta di circolazione sospesa
+- si circola in centri abitati con emissione inquinanti
+- si circola senza copertura assicurativa
+- duplice violazione in un biennio di
+  - norme precedenza
+  - norme passaggi a livello
+  - norme sorpasso
+  - norme distanza sicurezza
+  - norme incrocio
+  - norme uso cellulari
 
 ## Spie e Luci varie
 
@@ -116,7 +316,7 @@ spazio totale di arresto (SA).
 
 - luci di posizione rosse
 - luci di arresto rosse
-- catadiottri trinangolari rossi
+- catadiottri triangolari rossi
 - le frecce
 - luce bianca illuminazione targa
 - luce fendinebbia rossa
@@ -189,11 +389,65 @@ all'obbligo di presegnalare il veicolo fermo con il triangolo.
 Quando si posiziona il segnale triangolare mobile di pericolo, è sempre
 obbligatorio indossare indumenti ad alta visibilità, con la dicitura "EN 471"
 
-## Freni
-
 ## Casi Consentiti di Sorpasso
 
+- consentito dalla segnaletica
+- traffico, strada e visibilità sono idonei al sorpasso
+- c'è spazio sufficiente in base alla lunghezza e alla velocità dei veicoli da
+  sorpassare
+- non ci sono veicoli provenienti dal senso opposto
+- quello davanti non ha dato segnali per compiere anche lui la manovra di
+  sorpasso (non sorpassare se quello davanti ha intenzione anche lui di
+  sorpassare)
+- quello dietro non ha intenzione di sorpassare pure lui
+- a un incrocio
+  - regolato da semaforo o da agenti
+  - sorpassare veicoli a due ruote non a motore
+- scarsa visibilità
+  - strada a due corsie per ogni senso
+  - strada due carreggiate separate
+  - strade a senso unico
+
+### Sorpasso a destra
+
+Consentito quando
+
+- quello che vuoi sorpassare ha indicato che girerà a sinistra
+- quello che vuoi sorpassare ha indicato che si fermerà a sinistra
+- si sorpassa un tram in marcia e la lunghezza lo consente
+- si sorpassa un tram fermo con salvagente presente
+
+### Sorpassi vietati
+
+- curve in strade a doppio senso
+- salita di dosso in strada a doppio senso/due corsie
+- limitata visibilità a doppio senso con due corsie (una per senso)
+- manca lo spazio
+- quelli dietro e avanti stanno sorpassando anche loro
+- per superare un veicolo fermo/rallentato che da' la precedenza
+- su corsie di accelerazione/decelerazione
+- quando c'er segnale che te dice de no
+- nella scia di veicoli
+- in prossimità passaggi a livello senza barriere e privi di semaforo
+- in prossimità di incroci non regolati
+- valicando strisce continue
+- a destra tram fermo senza salvagente
+
 ## In caso di incidente
+
+Obbligo di
+
+- fermarsi e prestare assistenza agli eventuali feriti
+- fornire le proprie generalità ed estremi del veicolo danneggiato
+  - patente
+  - targa
+  - assicurazione
+- evitare che vengano modificate tracce per ricostruire dinamica
+- avvalersi dei moduli per la denunzia assicurazione
+- mettere segnale veicolo fermo, con giubbotto alta visibilità
+- spegnere quadro elettrico in caso rischio incendio
+- gettare sabbia o terra in mancanza estintore
+- proteggere luogo incidente, avvertire autorità, soccorrere feriti
 
 ## Limiti di Velocità
 
@@ -233,12 +487,3 @@ Altre note
 
 - il limite massimo che può essere segnalato è di 150 km/h su autostrade con
   corsie di emergenza e Tutor.
-
-## Assistenza Infortunati Stradali
-
-## Formule SR/SF/SA
-
-- **Spazio di reazione (SR)**: $(velocità/10) * 3$
-- **Spazio di frenatura (SF)**: $(V^2)/(250 * f)$
-  - $f$ è il coefficiente di aderenza
-- **Spazio totale arresto (SA)**: $SR + SF /approx (V/10)^2$
