add cross correlation zettel

--- a/2020-09-28t19-30-00z.md
+++ b/2020-09-28t19-30-00z.md
@@ -1,12 +1,13 @@
 ---
 date: 2020-09-28 19:30:00
-title: Autocorrelation 
+title: Autocorrelation
 id: 2020-09-28t19-30-00z
 ---
 
 When utilizing [autoregressive models](./2020-09-23t15-14-39z.md) we are
 interested in correlation of the signal with a delayed copy of itself. This is
-known as autocorrelation. 
+known as autocorrelation, and is thus a special case of
+a [cross-correlation](./2021-04-17t09-31-47z.md)
 
 We can calculate the autocorrelation function (ACF) of a signal and a particular
 lag amount by calculating the [Pearson Correlation](./2020-09-28t14-34-27z.md)
